--- a/LetterForYou.html
+++ b/LetterForYou.html
@@ -11,18 +11,18 @@
 <div class="valentines-day">
   <div class="envelope"></div>
   <div class="heart"></div>
-  <div class="text">HAPPY <br>VALENTINE'S <br>DAY!</div>
+  <div class="text">dear <br>libby <br>Davies </div>
   <div class="front"></div> 
 </div>
 
 <div id="card"> 
   <div class="side one"></div>
   <div class="side two">
-    <h2>Alexa Cabug</h2>
+    <h2>libby my darlin</h2>
     <p>I hope you are doing well</p>
     <p>I wish you find the happiness and love that you deserve.</p>
     <p>I will always cherish and remember the moments we had together. Valentines day is not always loving someone but also loving yourself. </p>
-    <p>B. Alex</p>
+    <p>B. mason </p>
   </div>
 </div>
 
